--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@
 body {
   font-family: 'Cantarell', sans-serif;
   background-color: #E5EAFA;
+  text-align: center;
+
 }
 
 h1, h2 {
   font-family: 'Sonsie One', sans-serif;
+  text-align: center;
+
 }
 
 h1 {
@@ -20,7 +24,7 @@ h2 {
 }
 
 h3 {
-  color: #1D7874;
+  color: #EC9F05;
 }
 
 p {
@@ -33,7 +37,7 @@ a {
 
 i {
   font-size: 32px;
-  color: lightgrey;
+  color: #BF3100;
 }
 
 i:hover {
@@ -51,7 +55,7 @@ i:hover {
 }
 
 .btn-red {
-  background-color: #DA5552;
+  background-color: #BF3100;
   padding: 10px 15px;
   color: white;
   border-radius: 5px;
@@ -79,8 +83,6 @@ div {
   border-radius: 10px;                        /* Small radius */
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
   width: 700px;
-
-  margin: 10px;
+  margin: auto;
+  margin-top: 15px;
 }
-
-
